<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/storeFragment"
            android:icon="@drawable/ic_store"
            android:title="@string/menu_store" />
        <item
            android:id="@+id/depositFragment"
            android:icon="@drawable/ic_deposit"
            android:title="@string/menu_deposit" />
        <item
            android:id="@+id/productFragment"
            android:icon="@drawable/ic_product"
            android:title="@string/menu_product"/>
        <item
            android:id="@+id/categoryFragment"
            android:icon="@drawable/ic_category"
            android:title="@string/menu_category"/>

    </group>
</menu>