<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/_24sdp"
    android:paddingEnd="@dimen/_24sdp"
    tools:context=".ui.store.AddStoreFragment">

    <EditText
        android:id="@+id/et_storeName"
        style="@style/editText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_60sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/background_shape_editext"
        android:hint="@string/store_name"
        android:padding="@dimen/_16sdp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_storeAddres"
        style="@style/editText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_60sdp"
        android:layout_below="@+id/et_storeName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_shape_editext"
        android:hint="@string/store_location"
        android:padding="@dimen/_16sdp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_storeOwner"
        style="@style/editText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_60sdp"
        android:layout_below="@+id/et_storeAddres"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_shape_editext"
        android:hint="@string/store_owner"
        android:padding="@dimen/_16sdp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_storeContact"
        style="@style/editText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_60sdp"
        android:layout_below="@+id/et_storeOwner"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_shape_editext"
        android:hint="Store Contact"
        android:inputType="phone"
        android:maxLength="13"
        android:padding="@dimen/_16sdp"
        android:singleLine="true" />

    <Button
        android:id="@+id/btn_addStore"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_below="@+id/et_storeContact"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:padding="@dimen/_8sdp"
        android:text="Add Store"
        android:textAppearance="@style/title14" />


</RelativeLayout>